#5570 Replace deprecated ConcMarkSweepGC by G1GC (#5571)